--- a/cdemo/configure.ac
+++ b/cdemo/configure.ac
@@ -18,12 +18,12 @@
 
 AC_PREREQ(2.50)
 
-
 ## ------------------------ ##
 ## Autoconf initialisation. ##
 ## ------------------------ ##
 AC_INIT([cdemo], [0.1], [bug-libtool@gnu.org])
 AC_CONFIG_SRCDIR([main.c])
+AC_CONFIG_AUX_DIR([../config])
 
 
 ## ------------------------ ##
