* mdemo2/Makefile.am (INCLUDES): Include `$(top_srcdir)/../libltdl' instead of `../libltdl'.

--- a/mdemo2/Makefile.am
+++ b/mdemo2/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-INCLUDES = -I../libltdl
+INCLUDES = -I$(top_srcdir)/../libltdl
 
 EXTRA_DIST = acinclude.m4
 
