* libtoolize.in: Completely rewritten. * Makefile.am (AUTOMAKE_OPTIONS): Reduced to 1.7.  The 1.8 requirement just made the distribution much smaller due to m4_includes.  1.7 will bootstrap libtool just fine. * NEWS: Updated.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = 1.7a gnu
+AUTOMAKE_OPTIONS = 1.7 gnu
 ACLOCAL_AMFLAGS  = -I m4
 
 BUILD_SUBDIRS = . libltdl doc tests
