--- a/ltmain.in
+++ b/ltmain.in
@@ -389,6 +389,7 @@ exec_cmd=
 	  ;;
 
 	-static)
+	  build_libtool_libs=no
 	  build_old_libs=yes
 	  continue
 	  ;;
@@ -879,6 +880,9 @@ EOF
 	  fi
 	  if test -n "$link_static_flag"; then
 	    dlopen_self=$dlopen_self_static
+	    # See comment for -static flag below, for more details.
+	    compile_command="$compile_command $link_static_flag"
+	    finalize_command="$finalize_command $link_static_flag"
 	  fi
 	else
 	  if test -z "$pic_flag" && test -n "$link_static_flag"; then
@@ -1161,10 +1165,7 @@ EOF
 
       case $arg in
       -all-static)
-	if test -n "$link_static_flag"; then
-	  compile_command="$compile_command $link_static_flag"
-	  finalize_command="$finalize_command $link_static_flag"
-	fi
+	# The effects of -all-static are defined in a previous loop.
 	continue
 	;;
 
