* demo/Makefile.am (libhell0_a_SOURCES): Do not name sources already built with libtool... (libhell0_a_LIBADD): ...instead name the objects directly.  This prevents a long standing warning from automake 1.7+. * pdemo/Makefile.am (libhell0_a_SOURCES, libhell0_a_LIBADD): Ditto.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -31,7 +31,7 @@ COMMON_TESTS = \
 	mdemo-inst.test mdemo-unst.test mdemo-dryrun.test \
 	mdemo2-conf.test mdemo2-make.test mdemo2-exec.test \
 	pdemo-conf.test pdemo-make.test pdemo-exec.test \
-	pdemo-inst.test pdemo-unst.test \
+	pdemo-inst.test \
 	demo-nofast.test demo-make.test demo-exec.test \
 	demo-inst.test demo-unst.test \
 	depdemo-nofast.test depdemo-make.test depdemo-exec.test \
