* configure.ac, libltdl/configure.ac, tests/cdemo/configure.ac, tests/demo/configure.ac, tests/depdemo/configure.ac, tests/f77demo/configure.ac, tests/mdemo/configure.ac, tests/mdemo2/configure.ac, tests/pdemo/configure.ac, tests/tagdemo/configure.ac (AM_INIT_AUTOMAKE): Remove redundant arguments. * libltdl/configure.ac: Use quadrigraphs to escape macronames.

--- a/configure.ac
+++ b/configure.ac
@@ -60,7 +60,7 @@ AC_SUBST([TIMESTAMP])
 ## ------------------------ ##
 ## Automake Initialisation. ##
 ## ------------------------ ##
-AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE
 
 
 ## ------------------------------- ##
