--- a/tests/cdemo/configure.ac
+++ b/tests/cdemo/configure.ac
@@ -29,7 +29,7 @@ AC_CONFIG_AUX_DIR([../../config])
 ## ------------------------ ##
 ## Automake Initialisation. ##
 ## ------------------------ ##
-AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE
 
 
 ## ------------------ ##
