--- a/tests/tagdemo/configure.ac
+++ b/tests/tagdemo/configure.ac
@@ -32,7 +32,7 @@ AC_CANONICAL_TARGET
 ## ------------------------ ##
 ## Automake Initialisation. ##
 ## ------------------------ ##
-AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE
 
 
 ## ---------------- ##
