* tests/depdemo/configure.ac, tests/mdemo/configure.ac, tests/mdemo2/configure.ac: process 'libtool --features' from Makefile, not configure -- because libtool doesn't exist at configure time.

--- a/tests/depdemo/configure.ac
+++ b/tests/depdemo/configure.ac
@@ -49,11 +49,7 @@ AC_SUBST([LIBTOOL_DEPS])
 ## ------------------------------- ##
 ## depdemo specific configuration. ##
 ## ------------------------------- ##
-if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
-  STATIC=-static
-else
-  STATIC=
-fi
+STATIC="\`${CONFIG_SHELL} ./libtool --features | ${SED} -n -e '/enable static/s/^.*\$\$/-static/p'\`"
 AC_SUBST([STATIC])
 
 ## ---------------------------- ##
