* m4/libtoolize.in (func_scan_files): If libtoolize is run before automake has created install-sh and configure.ac does not mention AC_CONFIG_AUX_DIR, fall back to the current directory for auxdir.

--- a/libtoolize.in
+++ b/libtoolize.in
@@ -336,6 +336,9 @@ func_scan_files ()
       done
     fi
 
+    # Just use the current directory if all else fails.
+    test -n "$auxdir" || auxdir=.
+
 
     # ------------------------------ #
     # Find local m4 macro directory. #
