--- a/tests/cdemo/configure.ac
+++ b/tests/cdemo/configure.ac
@@ -1,5 +1,5 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
-# Copyright (C) 2001, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2003 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -41,7 +41,7 @@ AC_PROG_CC
 ## ----------------------- ##
 ## Libtool initialisation. ##
 ## ----------------------- ##
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
 
