--- a/tests/pdemo/configure.ac
+++ b/tests/pdemo/configure.ac
@@ -1,5 +1,5 @@
 ## Process this file with autoconf to create configure. -*- autoconf -*-
-# Copyright (C) 2001, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2001, 2003 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -44,7 +44,7 @@ AC_C_CONST
 ## Libtool initialisation. ##
 ## ----------------------- ##
 AC_LIBTOOL_DLOPEN
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
 STATIC=
