--- a/ltmain.in
+++ b/ltmain.in
@@ -1325,6 +1325,11 @@ EOF
 	continue
 	;;
 
+      -mt|-mthreads|-kthread|-Kthread|-pthread|-pthreads|--thread-safe)
+	deplibs="$deplibs $arg"
+	continue
+        ;;
+
       # gcc -m* arguments should be passed to the linker via $compiler_flags
       # in order to pass architecture information to the linker
       # (e.g. 32 vs 64-bit).  This may also be accomplished via -Wl,-mfoo
@@ -1845,6 +1850,15 @@ EOF
 	lib=
 	found=no
 	case $deplib in
+	-mt|-mthreads|-kthread|-Kthread|-pthread|-pthreads|--thread-safe)
+	  if test "$linkmode,$pass" = "prog,link"; then
+	    compile_deplibs="$deplib $compile_deplibs"
+	    finalize_deplibs="$deplib $finalize_deplibs"
+	  else
+	    deplibs="$deplib $deplibs"
+	  fi
+	  continue
+	  ;;
 	-l*)
 	  if test "$linkmode" != lib && test "$linkmode" != prog; then
 	    $echo "$modename: warning: \`-l' is ignored for archives/objects" 1>&2
