* m4/libtool.m4 (AC_LIBTOOL_SETUP): Don't define the value for ltmain unconditionally. (_LT_PROG_LTMAIN): New macro to ensure that the shell variable `ltmain' actually points at a suitable `ltmain.sh'. (_AC_PROG_LIBTOOL): Require it. (AC_LIBTOOL_CONFIG, _LT_AC_TAG_CONFIG): Invoke it. * Makefile.am (libtool): ltmain.sh is in the build tree. * libltdl/configure.ac: Ditto.

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,7 +42,7 @@ bin_SCRIPTS = libtool libtoolize
 
 config_status = $(top_builddir)/config.status
 
-libtool: $(srcdir)/config/ltmain.sh $(top_builddir)/configure
+libtool: config/ltmain.sh $(top_builddir)/configure
 	CONFIG_FILES= CONFIG_HEADERS= $(SHELL) $(config_status)
 	chmod +x $@
 
