* tests/cdemo/configure.ac, tests/demo/configure.ac, tests/depdemo/configure.ac, tests/f77demo/configure.ac, tests/mdemo/configure.ac, tests/mdemo2/configure.ac, tests/pdemo/configure.ac, tests/tagdemo/configure.ac: Declare just the tags we need using AC_LIBTOOL_TAGS, reducing the size of the configure script by 50% in most cases.

--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -64,6 +64,7 @@ AC_C_INLINE
 ## Libtool initialisation. ##
 ## ----------------------- ##
 AC_LIBTOOL_WIN32_DLL
+AC_LIBTOOL_TAGS([])
 AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
