--- a/tests/mdemo2/configure.ac
+++ b/tests/mdemo2/configure.ac
@@ -44,6 +44,7 @@ AC_C_CONST
 ## Libtool initialisation. ##
 ## ----------------------- ##
 AC_LIBTOOL_DLOPEN
+AC_LIBTOOL_TAGS([])
 AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
