--- a/tests/demo/configure.ac
+++ b/tests/demo/configure.ac
@@ -46,6 +46,7 @@ AC_EXEEXT
 ## ----------------------- ##
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_WIN32_DLL
+AC_LIBTOOL_TAGS([])
 AC_PROG_LIBTOOL
 AC_SUBST([LIBTOOL_DEPS])
 
