--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,8 @@ DIST_SUBDIRS = $(BUILD_SUBDIRS) $(CONF_SUBDIRS)
 aclocal_macros = m4/libtool.m4 m4/ltdl.m4
 
 EXTRA_DIST = $(aclocal_macros) bootstrap libtoolize.in ltmain.in \
-	config/mkstamp ChangeLog.0 ChangeLog.1
+	config/mkstamp ChangeLog.1996 ChangeLog.1997 ChangeLog.1998 \
+	ChangeLog.1999 ChangeLog.2000 ChangeLog.2001 ChangeLog.2002
 CLEANFILES = libtool libtoolize ltmain.shT
 
 # These are required by libtoolize.
